# bsi-exercise

./: .gitignore  CMakeLists.txt  README.md  constant_failure_rate.cpp  main.cpp  manual_switches.cpp  obeying_exponential_law.cpp  operations.cpp  probability_insulators.cpp  transformers_failure.cpp
0203/: README.md  main.cpp  obeying_exponential_law.cpp
0203/headers/: constant_failure_rate.h  obeying_exponential_law.h  probability_insulators.h
04/: README.md
05/: README.md  build.gradle  cards.db  null  settings.gradle
05/src/main/java/com/company/: SelectApp.java
05/src/test/java/com/company/: BankTest.java
07/: README.md  main.py
08/: README.md  main.py
0910/: README.md  app.py
0910/templates/: index.html  layout.html
11/: README.md
headers/: manual_switches.h  operations.h  probability_insulators.h  transformers_failure.h
